<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright (C) 2014 wak
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~    http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->
<resources>
    <string name="app_name">1x1 clock</string>
    <string name="url_app" translatable="false">"https://play.google.com/store/apps/details?id=com.github.wakhub.tinyclock</string>

    <string name="background_color_default" translatable="false">#99ffffff</string>
    <string name="text_color_default" translatable="false">#000000</string>
    <string name="message_confirm">Are you sure?</string>
    <string name="message_success_reset_style">Style has been updated by default style</string>
    <string name="message_invalid_color">Invalid color (%s)</string>

    <string name="pref_explanation_for_color">#RRGGBB, #AARRGGBB or color name(white, red, …)</string>
    <string name="pref_text_color_key" translatable="false">textColor</string>
    <string name="pref_text_color_title">Text color</string>
    <string name="pref_text_color_summary" translatable="false">@string/pref_explanation_for_color</string>
    <string name="pref_background_color_key" translatable="false">backgroundColor</string>
    <string name="pref_background_color_title">Background color</string>
    <string name="pref_background_color_summary" translatable="false">@string/pref_explanation_for_color</string>
    <string name="pref_reset_style_key" translatable="false">resetStyle</string>
    <string name="pref_reset_style_title">Reset style</string>
    <string name="pref_open_clock_app_key" translatable="false">openClockApp</string>
    <string name="pref_open_clock_app_title">Clock app</string>
    <string name="pref_open_datetime_settings_key" translatable="false">openDatetimeSettings</string>
    <string name="pref_open_datetime_settings_title">Date and time settings</string>
    <string name="pref_app_info_key" translatable="false">appInfo</string>
    <string name="pref_app_info_title">App information</string>

    <string name="date_text_format_12h" translatable="false">MMM dd E</string>
    <string name="date_text_format_24h" translatable="false">MMM dd E</string>
    <string name="time_text_format_12h" translatable="false">hh:mm a</string>
    <string name="time_text_format_24h" translatable="false">kk:mm</string>
</resources>
