<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright (C) 2014 wak
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~    http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="@string/pref_open_datetime_settings_key"
        android:title="@string/pref_open_datetime_settings_title"/>
    <Preference
        android:key="@string/pref_open_clock_app_key"
        android:title="@string/pref_open_clock_app_title"/>
    <EditTextPreference
        android:defaultValue="@string/text_color_default"
        android:dialogMessage="@string/pref_text_color_summary"
        android:key="@string/pref_text_color_key"
        android:title="@string/pref_text_color_title"/>
    <EditTextPreference
        android:defaultValue="@string/background_color_default"
        android:dialogMessage="@string/pref_explanation_for_color"
        android:key="@string/pref_background_color_key"
        android:title="@string/pref_background_color_title"/>
    <Preference
        android:key="@string/pref_reset_style_key"
        android:title="@string/pref_reset_style_title"/>
    <Preference
        android:key="@string/pref_app_info_key"
        android:title="@string/pref_app_info_title"/>
</PreferenceScreen>